Fix spacing in nested lists

--- a/themes/MonoBook/main.css
+++ b/themes/MonoBook/main.css
@@ -137,6 +137,10 @@ h4, h5, h6 {
 	border-bottom: none;
 	font-weight: normal;
 }
+
+/* Because in some cases there is a <p> in nested lists */
+li p { margin:0; }
+
 ul { 
 	line-height: 1.5em;
 	list-style-type: square;
